--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -22,8 +22,12 @@ env:
   TF_BACKEND_BUCKET_NAME: ${{ secrets.TF_BACKEND_BUCKET_NAME }}
   TF_BACKEND_BUCKET_KEY: ${{ secrets.TF_BACKEND_BUCKET_KEY }}
   TF_BACKEND_BUCKET_REGION: ${{ secrets.TF_BACKEND_BUCKET_REGION }}
-  # Build terraform var string like -var=var_name=${{ secrets.A_SECRET_NAME_IN_GITHUB }}
-  TF_VARS: 
+  TF_VARS: >-
+     -var="max_gems_per_day=${{ vars.MAX_GEMS_PER_DAY }}" 
+     -var="discord_public_key_secrets_arn=${{ secrets.DISCORD_PUBLIC_KEY_SECRETS_ARN }}" 
+     -var="discord_gems_channel=${{ vars.DISCORD_GEMS_CHANNEL }}" 
+     -var="discord_bot_token_secret_arn=${{ secrets.DISCORD_BOT_TOKEN_SECRETS_ARN }}" 
+     -var="prefix=${{ vars.PREFIX }}"
   RUNNER_IMAGE_NAME: github-runner-image
 
 jobs:
