concurrency fix for github action

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -10,6 +10,9 @@ permissions:
 defaults:
   run:
     shell: bash
+    
+concurrency:
+  group: ${{ github.ref }}
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
