--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,1 +1,8 @@
 pytest==7.1.2
+boto3-stubs[secretsmanager,dynamodb]==1.24.23
+boto3-stubs==1.24.23
+boto3==1.26.104
+discord.py==2.0.1
+pynacl==1.5.0
+pynamodb==5.4.1
+requests==2.25.1
