add tests to pipelines, make arm64, python3.12

--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,8 +1,11 @@
 name: 'Deploy Infrastructure'
 
 on:
-  push:
+  workflow_run:
+    workflows: ["Quality Check"]
     branches: [master]
+    types: 
+      - completed
 
 permissions:
   contents: read
